@@ -15,7 +15,6 @@
 (*                                                                        *)
 (**************************************************************************)
 
-
 open Format
 open Graph
 (*
